rework how to do zabbix-agent[2] since 2 is not supported everywhere that 1 is

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -11,7 +11,16 @@
     name: "systemd-resolved"
     state: "restarted"
 
-- name: "restart zabbix-agent2"
+- name: "restart zabbix-agent with systemd"
+  ansible.builtin.systemd:
+    name: "zabbix-agent"
+    state: "restarted"
+  listen: "restart zabbix-agent"
+  when: "ansible_distribution == 'Ubuntu'"
+
+- name: "restart zabbix-agent2 with systemd"
   ansible.builtin.systemd:
     name: "zabbix-agent2"
     state: "restarted"
+  listen: "restart zabbix-agent2"
+  when: "ansible_distribution == 'Ubuntu'"
