--- a/roles/common/tasks/zabbix-agent/main.yml
+++ b/roles/common/tasks/zabbix-agent/main.yml
@@ -1,5 +1,7 @@
 ---
 # Tasks for zabbix-agent installation and configuration.
+- ansible.builtin.import_tasks: "freebsd.yml" # zabbix-agent
+  when: "ansible_distribution == 'FreeBSD'"
 - name: "Install Zabbix Repository"
   ansible.builtin.apt:
     deb: "https://repo.zabbix.com/zabbix/5.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.4-1+ubuntu{{ ansible_lsb.release }}_all.deb"
