--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -11,6 +11,13 @@
     name: "systemd-resolved"
     state: "restarted"
 
+- name: "restart zabbix-agent"
+  ansible.builtin.service:
+    name: "zabbix_agentd"
+    state: "restarted"
+  listen: "restart zabbix-agent"
+  when: "ansible_distribution == 'FreeBSD'"
+
 - name: "restart zabbix-agent with systemd"
   ansible.builtin.systemd:
     name: "zabbix-agent"
