--- a/roles/common/tasks/zabbix-agent/configuration2.yml
+++ b/roles/common/tasks/zabbix-agent/configuration2.yml
@@ -22,3 +22,5 @@
     regexp: "^ServerActive="
     line: "ServerActive=zabbix-server.hogs.tswn.us"
   notify: "restart zabbix-agent2"
+  tags:
+    - "zabbix-agent"
