--- a/roles/common/tasks/zabbix-agent/main.yml
+++ b/roles/common/tasks/zabbix-agent/main.yml
@@ -5,6 +5,8 @@
 - name: "Install Zabbix Repository"
   ansible.builtin.apt:
     deb: "https://repo.zabbix.com/zabbix/5.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.4-1+ubuntu{{ ansible_lsb.release }}_all.deb"
+  tags:
+    - "zabbix-agent"
   when: "ansible_distribution == 'Ubuntu'"
 - ansible.builtin.import_tasks: "ubuntu2.yml" # zabbix-agent2
   when: "ansible_distribution == 'Ubuntu' and ansible_architecture == 'x86_64'"
