--- a/roles/common/tasks/zabbix-agent/ubuntu2.yml
+++ b/roles/common/tasks/zabbix-agent/ubuntu2.yml
@@ -6,10 +6,14 @@
     state: "latest"
     update_cache: yes
     cache_valid_time: 3600
+  tags:
+    - "zabbix-agent"
 - name: "Enable zabbix-agent2"
   ansible.builtin.systemd:
     name: "zabbix-agent2"
     enabled: yes
+  tags:
+    - "zabbix-agent"
 
 # Configuration
 - ansible.builtin.import_tasks: "configuration2.yml"
@@ -18,3 +22,5 @@
   ansible.builtin.systemd:
     name: "zabbix-agent2"
     state: "started"
+  tags:
+    - "zabbix-agent"
