import_tasks seems broken in 2.9

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -54,7 +54,7 @@
   when: ansible_distribution == "Ubuntu"
 
 # Zabbix Agent
-- ansible.builtin.import_tasks: "zabbix-agent/main.yml"
+- include: "zabbix-agent/main.yml"
 
 # Cleanup From Provisioning
 - name: Remove provision user
