--- a/roles/common/tasks/zabbix-agent/ubuntu2.yml
+++ b/roles/common/tasks/zabbix-agent/ubuntu2.yml
@@ -16,7 +16,7 @@
     - "zabbix-agent"
 
 # Configuration
-- ansible.builtin.import_tasks: "configuration2.yml"
+- include: "configuration2.yml"
 
 - name: "Ensure zabbix-agent2 is started"
   ansible.builtin.systemd:
