fix custom facts on freebsd

--- a/roles/common/tasks/facts.yml
+++ b/roles/common/tasks/facts.yml
@@ -1,17 +1,20 @@
 ---
 # tasks file for installing custom facts for the common role
-- name: Create custom facts directory
+- name: "Create custom facts directory"
   ansible.builtin.file:
-    path: "/etc/ansible/facts.d"
+    path: "{{ common__etc_dir }}/ansible/facts.d"
     state: "directory"
 
-- name: Add rpi custom fact
+- name: "Add custom facts"
   ansible.builtin.copy:
-    src: "files/rpi.fact"
-    dest: "/etc/ansible/facts.d/rpi.fact"
+    src: "files/{{ item }}"
+    dest: "{{ common__etc_dir }}/ansible/facts.d/{{ item }}"
     mode: "u=rx,g=rx,o=rx"
-  register: added_custom_fact_rpi
+  loop:
+    - "jail.fact"
+    - "rpi.fact"
+  register: added_custom_fact
 
 - name: Re-run setup to use custom facts
   setup: ~
-  when: added_custom_fact_rpi.changed
+  when: added_custom_fact.changed
