run pruning more often (has a limit of 200 it seems)

--- a/roles/ara-docker/tasks/main.yml
+++ b/roles/ara-docker/tasks/main.yml
@@ -104,6 +104,5 @@
     name: "Prune ara playbook storage"
     job: "if ! out=`{{ cron_command }}`; then echo $out; fi"
     user: "ansible"
-    hour: "1"
-    minute: "0"
+    minute: "10" # Run every hour at ten-past the hour.
     state: present
