[refactor] pull out setting up macvlan docker network for use in general

--- a/docker-vm-host.yml
+++ b/docker-vm-host.yml
@@ -6,6 +6,9 @@
     - role: "nickjj.docker"
       tags:
         - "docker"
+    - role: "docker-networks"
+      tags:
+        - "docker"
     - role: "zabbix"
       tags:
         - "docker"
