[refactor] pull out zabbix front and backend into different roles

--- a/docker-vm-host.yml
+++ b/docker-vm-host.yml
@@ -9,7 +9,11 @@
     - role: "docker-networks"
       tags:
         - "docker"
-    - role: "zabbix"
+    - role: "docker-zabbix-backend"
+      tags:
+        - "docker"
+        - "zabbix"
+    - role: "docker-zabbix-frontend"
       tags:
         - "docker"
         - "zabbix"
